--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/corevo/whiten/issues"
   },
-  "homepage": "https://github.com/corevo/whiten#readme"
+  "homepage": "https://github.com/corevo/whiten#readme",
+  "dependencies": {
+    "sinopia": "^1.4.0"
+  }
 }
