--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/corevo/whiten#readme",
   "dependencies": {
     "md5": "^2.0.0",
+    "mkdirp": "^0.5.1",
     "sinopia": "^1.4.0",
     "yamljs": "^0.2.4"
   },
