for cleanup purposes only :wink:

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "md5": "^2.0.0",
     "mkdirp": "^0.5.1",
     "random-port": "^0.1.0",
+    "rimraf": "^2.5.1",
     "sinopia": "^1.4.0",
     "yamljs": "^0.2.4"
   },
