--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "whiten",
   "version": "0.0.0",
   "description": "npm/apm whitening cli utility",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +22,9 @@
     "url": "https://github.com/corevo/whiten/issues"
   },
   "homepage": "https://github.com/corevo/whiten#readme",
+  "bin": {
+      "whiten": "lib/cli.js"
+  },
   "dependencies": {
     "commander": "^2.9.0",
     "easy-zip": "0.0.4",
