--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/corevo/whiten#readme",
   "bin": {
-      "whiten": "lib/cli.js"
+    "whiten": "lib/cli.js"
   },
   "dependencies": {
     "commander": "^2.9.0",
@@ -33,6 +33,7 @@
     "random-port": "^0.1.0",
     "rimraf": "^2.5.1",
     "sinopia": "^1.4.0",
+    "superagent": "^1.7.2",
     "yamljs": "^0.2.4"
   },
   "devDependencies": {
