wget for atom packages dist

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sinopia": "^1.4.0",
     "superagent": "^1.7.2",
     "superagent-bluebird-promise": "^3.0.0",
+    "wget": "0.0.1",
     "yamljs": "^0.2.4"
   },
   "devDependencies": {
