--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bluebird": "^3.1.5",
     "commander": "^2.9.0",
     "easy-zip": "0.0.4",
+    "follow-redirects": "0.0.7",
     "md5": "^2.0.0",
     "mkdirp": "^0.5.1",
     "random-port": "^0.1.0",
