--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "bluebird": "^3.1.5",
     "commander": "^2.9.0",
     "easy-zip": "0.0.4",
-    "follow-redirects": "0.0.7",
     "md5": "^2.0.0",
     "mkdirp": "^0.5.1",
     "random-port": "^0.1.0",
+    "request": "^2.69.0",
     "rimraf": "^2.5.1",
     "sinopia": "^1.4.0",
     "superagent": "^1.7.2",
