--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "whiten",
-  "version": "2.0.3",
+  "version": "2.1.0",
   "description": "npm/apm whitening cli utility",
   "main": "lib/index.js",
   "scripts": {
+    "build": "babel -d lib src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,13 +34,14 @@
     "random-port": "^0.1.0",
     "request": "^2.69.0",
     "rimraf": "^2.5.1",
-    "sinopia": "^1.4.0",
+    "sinopia2": "^2.0.2",
     "superagent": "^1.7.2",
     "superagent-bluebird-promise": "^3.0.0",
     "tar-fs": "^1.9.0",
     "yamljs": "^0.2.4"
   },
   "devDependencies": {
+    "babel-cli": "^6.4.5",
     "babel-core": "^6.4.5",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13"
